# ai-analyst

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent_main.py  dataset-eda.ipynb  default_db_script.py  docker-compose.yml  frontend_main.py  hello.py  langgraph_main.py  populate_db_script.py  pyproject.toml
documentation/: evaluation.md  remove_december_2023.py  salesbystate.sql  setup.md  wwi-date-update-1.sql  wwi-date-update-2.sql
documentation/agents/: internal_data_agent.md  research_agent.md
documentation/architecture/: agents.md  api.md  confiuguration_database.md  deployment.md
documentation/emails/: 250612_high_level_plan.md  High_level_plan.md
documentation/presentation/: 260617 - Presentation.pptx
outputs/: 2506252024-Gross Profit Margin_report.md.md  2507011539-Sales Report - State - California_report.md.md  2507012114-Sales Report - State - California_report.md.md
outputs/storage/: 2506251444-Gross Profit Margin_report.md  2506252050-Gross Profit Margin_report.md.md  2507011317-Sales Report - State - California_report.md.md
src/agents/: client.py  code_agent_with_review.py  coder_agent.py  data_visualization_agent.py  database_agent.py  db_agent.py  editor_agent.py  graph.py  internal_data_agent.py  logging_config.py  models.py  quant_agent.py  quantitative_agent.py  report_editor_graph.py  report_graph.py  research_graph.py  research_team.py  utils.py
src/agents_langgraph/: db_agent.py  graph.py  models.py  quant_agent.py  utils.py
src/configuration/: auth.py  company.py  constants.py  consts.py  crontab.py  db.py  db_auth.py  db_models.py  db_service.py  kpis.py  logger.py  logging.py  recipients.py  settings.py
tests/: consts.py
(+120 files in other folders)
