[project]
name = "ai-analyst"
version = "0.1.0"
description = "AI Financial Analyst"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic[email]>=2.11.6",
    "pydantic-settings>=2.9.1",
    "python-crontab>=3.2.0",
    "gradio>=5.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
