[project]
name = "ai-analyst"
version = "0.1.0"
description = "AI Financial Analyst"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic[email]>=2.11.6",
    "pydantic-settings>=2.9.1",
    "python-crontab>=3.2.0",
    "gradio>=5.34.0",
    "azure-identity>=1.23.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "aioodbc>=0.5.0",
    "pytest-asyncio>=1.0.0",
    "semantic-kernel[google]>=1.32.2",
    "markdown-pdf>=1.7",
    "matplotlib>=3.10.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
