[project]
name = "ai-analyst"
version = "0.1.0"
description = "AI Financial Analyst"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic[email]>=2.11.6",
    "pydantic-settings>=2.9.1",
    "python-crontab>=3.2.0",
    "streamlit>=1.39.0",
    "azure-identity>=1.23.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "aioodbc>=0.5.0",
    "pytest-asyncio>=1.0.0",
    "semantic-kernel[google]>=1.32.2",
    "markdown-pdf>=1.7",
    "matplotlib>=3.10.3",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "langchain[google-genai,openai]>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.0",
]
